k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  #namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: vamshipentala/reactapp:backend3
          ports:
            - containerPort: 8800
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  #namespace: dev
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 8800
      targetPort: 8800
  #type: LoadBalancer
