k8s/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
  #namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: vamshipentala/reactapp:frontend18
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: client-service
  #namespace: dev
spec:
  selector:
    app: client
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  #type: LoadBalancer
